# novaposhta-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Readme.md  data.db
migrations/: 20210825144758_time.sql  20210825145052_warehouses.sql
src/: db.rs  error.rs  lib.rs  properties.rs  raw.rs  types.rs
src/models/: cargo.rs  document.rs  mod.rs  recipient.rs  sender.rs
