[package]
name = "novaposhta"
version = "0.1.2"
edition = "2018"
description = "Api for novapostha"
documentation = "https://tokyjo.gitlab.io/novaposhta-rs"
repository = "https://gitlab.com/tokyjo/novaposhta-rs"
homepage = "https://gitlab.com/tokyjo/novaposhta-rs"
readme = "Readme.md"
license = "MIT"
keywords = ["api", "novaposhta", "http"]
categories = ["accessibility", "api-bindings", "asynchronous"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.66"
chrono = "0.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "macros", "sqlite", "chrono" ] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
